[package]
name = "rusty_vainfo"
version = "0.1.3"
author = "Valerian G. <valerian@dusklabs.io>"
edition = "2018"
description = "libva-utils' vainfo implemented in rust"
license = "MIT"
repository = "https://github.com/vgarleanu/rusty_vainfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libva-sys = "0.1.2"
